--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jakewharton:butterknife:8.0.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
     compile 'com.zhy:okhttputils:2.6.2'
     compile 'com.android.support:recyclerview-v7:23.4.0'
@@ -42,4 +43,5 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     compile 'org.greenrobot:greendao:3.2.2' // add library
     compile 'com.lovedise:permissiongen:0.0.6'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
